--- a/mean-front/src/app/app.component.html
+++ b/mean-front/src/app/app.component.html
@@ -1,13 +1,13 @@
-<div>
-  <input type="text" name="a" id="a" [(ngModel)]="a"><br/>
-  <input type="text" name="b" id="b" [(ngModel)]="b"><br/>
-  <button type="button" (click)="onCalcul()">Calcul</button>
-  <button *ngIf="!iscal" type="button" (click)="onNew()">New</button>
+<div class="form-group col-lg-1" style="padding: 10px;">
+  <input type="text" name="a" id="a" [(ngModel)]="a" class="form-control"><br/>
+  <input type="text" name="b" id="b" [(ngModel)]="b" class="form-control"><br/>
+  <button type="button" (click)="onCalcul()" class="btn btn-primary">Calcul</button>
+  <button *ngIf="!iscal" type="button" (click)="onNew()" class="btn btn-primary">New</button>
   <div *ngIf="!iscal">{{ data }}</div>
 </div>
 <br/>
 <div>
-  <table >
+  <table class="table table-bordered table-striped" style="width: 50%;" >
     <tr >
       <td>ID</td>
       <td>resulat</td>
