compile to js and add it to public express

--- a/mean-front/src/app/app.component.html
+++ b/mean-front/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div *ngIf="!iscal">{{ data }}</div>
 </div>
 <br/>
-<div>
+<div id="tablediv">
   <table class="table table-bordered table-striped" style="width: 50%;" >
     <tr >
       <td>ID</td>
